rep-commission-lwc/force-app/main/default/objects/RC_Commission_Tier__mdt/RC_Commission_Tier__mdt.object-meta.xml
<CustomObject>
    <label>Commission Tier</label>
    <pluralLabel>Commission Tiers</pluralLabel>
</CustomObject>