rep-commission-lwc/force-app/main/default/objects/RC_Commission_Tier__mdt/fields/Plan_Tier_Payout__c.field-meta.xml
<CustomField>
    <fullName>Plan_Tier_Payout__c</fullName>
    <label>Plan Tier Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>