rep-commission-lwc/force-app/main/default/objects/RC_Commission_Tier__mdt/fields/Upper_of_Funded_Units_Against_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Upper_of_Funded_Units_Against_Eligible__c</fullName>
    <label>Upper % of Funded Units Against Eligible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>